# dataherald-python

./: .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
scripts/: lint
src/dataherald/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
src/dataherald/_utils/: _logs.py
src/dataherald/resources/: __init__.py  engine.py  finetunings.py  generations.py  golden_sqls.py  heartbeat.py  nl_generations.py  table_descriptions.py
src/dataherald/types/: __init__.py  database_connection_create_params.py  database_connection_list_response.py  database_connection_update_params.py  db_connection_response.py  finetuning_create_params.py  finetuning_list_params.py  finetuning_list_response.py  finetuning_response.py  generation_list_item.py  generation_list_params.py  generation_list_response.py  (+31 more)
tests/: conftest.py  heartbeat.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_database_connections.py  test_engine.py  test_finetunings.py  test_generations.py  test_golden_sqls.py  test_heartbeat.py  test_instructions.py  test_nl_generations.py  test_prompts.py  test_sql_generations.py  test_table_descriptions.py
tests/test_utils/: test_proxy.py  test_typing.py
(+31 files in other folders)
