[project]
name = "dataherald"
version = "0.0.2"
authors = [
  { name="Dataherald", email="support@dataherald.com" },
]
description = "The official Python library for the Dataherald NL-to-SQL API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dataherald/dataherald-python"
Issues = "https://github.com/dataherald/dataherald-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataherald"]

[tool.black]
line-length = 120
target-version = ["py37"]